chest beginner jumping jack fixed

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -121,6 +121,22 @@
   border: white;
   border-radius: 5px;
 }
+.bak1 {
+  margin-top: -17px;
+  margin-bottom: 20px;
+  margin-left: 45px;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 30px;
+  font-weight: bold;
+  color: rgb(0, 116, 0);
+}
+
+.back2 {
+  margin-bottom: -1px;
+  margin-left: 10vh;
+  margin-top: 9px;
+  font-size: 20px;
+}
 .back2 {
   margin-left: 8vh;
   margin-bottom: 10px;
@@ -417,15 +433,6 @@
   margin-top: -55px;
   margin-bottom: 20px;
   margin-left: 58px;
-  font-family: Arial, Helvetica, sans-serif;
-  font-size: 30px;
-  font-weight: bold;
-  color: rgb(0, 116, 0);
-}
-.bak1 {
-  margin-top: -17px;
-  margin-bottom: 20px;
-  margin-left: 45px;
   font-family: Arial, Helvetica, sans-serif;
   font-size: 30px;
   font-weight: bold;
@@ -887,12 +894,6 @@
   margin-left: 25vh;
   font-family: Arial, Helvetica, sans-serif;
   margin-bottom: 20px;
-}
-.back2 {
-  margin-bottom: -17px;
-  margin-left: 10vh;
-  margin-top: 9px;
-  font-size: 20px;
 }
 @media only screen and (max-width: 800px) {
   .main {
@@ -1638,9 +1639,9 @@
     font-size: 25px;
   }
   .bak1 {
-    margin-top: 50px;
-    margin-bottom: 100px;
-    margin-left: 12vh;
+    margin-top: 35px;
+    margin-bottom: 60px;
+    margin-left: 10vh;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 33px;
     font-weight: bolder;
